# AgentDoc

./: .gitignore  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_EN.md  download_models.py  pyproject.toml  requirements.txt
agentdoc/: __init__.py
agentdoc/agents/: __init__.py  coordinator_agent.py  data_agent.py  qa_agent.py
agentdoc/api/: __init__.py  app.py  models.py  routes.py
agentdoc/core/: __init__.py
agentdoc/plugins/: __init__.py
agentdoc/processors/: __init__.py  base.py  factory.py  text_processor.py
agentdoc/prompts/: advanced_prompts.py  base.py  manager.py  qa_prompts.py  toc_prompts.py
agentdoc/qa/: citation.py  engine.py  retriever.py
agentdoc/queue/: __init__.py  worker.py
agentdoc/web/templates/: index.html
agents/: base.py  document_agent.py  meta_agent.py  reasoning_agent.py
api/: dependencies.py
cli/: __init__.py  main.py
core/: config.py  exceptions.py  logger.py
plugins/: base.py  manager.py  model_plugins.py  processor_plugins.py
processors/: batch_processor.py
prompts/: __init__.py
qa/: __init__.py  indexer.py  models.py  reasoning.py
queue/: manager.py
scripts/: model_manager.py
task_queue/: base.py
test_data/: sample_ebook.md
utils/: text_analyzer.py
